--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: "个人技术学习分享、记录、成长"
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/OJumpyo/OJumpyo.github.io/raw/master/images/test.png
+avatar: https://github.com/OJumpyo/OJumpyo.github.io/blob/master/images/test.jpg
 # 你的favicon（出现在浏览器tab上）图片URL，建议使用较小(64px × 64px)的图片
 favicon: https://github.com/OJumpyo/OJumpyo.github.io/raw/master/images/favicon.ico
 
